<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/nav_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_home_text" />
        <item
            android:id="@+id/nav_library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_nav_library"
            android:title="@string/nav_library_text"
            />
        <item
            android:id="@+id/nav_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_nav_playlist"
            android:title="@string/nav_playlist_text" />
</menu>