<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/border_dialog_playlist">

    <!-- Tiêu đề Dialog -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_playlist_add"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:paddingBottom="16dp"/>

    <!-- EditText nhập tên playlist -->
    <EditText
        android:id="@+id/edtPlaylistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_playlist_text_holder"
        android:background="@null"
        android:textColor="@android:color/white"
        android:textColorHint="#888888"
        android:paddingBottom="5dp"
        android:minHeight="48dp"

        android:singleLine="true"
        android:inputType="text"/>

    <!-- Đường kẻ dưới EditText -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888888"
        android:layout_marginBottom="16dp"/>

    <!-- Hai nút Cancel và Create -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_playlist_cancel_text"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:padding="10dp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#888888"/>

        <TextView
            android:id="@+id/btnCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_playlist_create_text"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="10dp"/>
    </LinearLayout>

</LinearLayout>
