<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_library"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView

        android:id="@+id/tvTitleLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:text="@string/library_text_title"
        android:textColor="@color/all_white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleLibrary">

        <Button
            android:id="@+id/btn_local"
            android:layout_width="140dp"
            android:layout_height="52dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/primary_color"
            android:text="@string/library_text_bottom_select"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_remote"
            android:layout_width="140dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/bg_btn_unselect"
            android:text="@string/library_text_bottom_unselect"
            android:textColor="@color/all_white" />
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lavLoading"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:lottie_rawRes="@raw/loadingremote"
        android:visibility="invisible"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llErrorNetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="visible"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <ImageView
            android:id="@+id/ivErrorNetwork"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_library_no_internet"
            android:layout_marginBottom="12dp"/>
        <TextView
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/all_white"
            android:text="@string/all_network_error"/>
        <Button
            android:id="@+id/btnTryAgain"
            android:layout_width="140dp"
            android:layout_height="52dp"
            android:backgroundTint="@color/primary_color"
            android:text="@string/all_try_again"
            android:textColor="#FFFFFF" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:visibility="invisible"
        android:id="@+id/rvLibrary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/bg_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llTab" />
</androidx.constraintlayout.widget.ConstraintLayout>