<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivtoSignin"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_signup_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLogoSignup"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/txtTitleSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/signup_title_text"
        android:textColor="@color/all_white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogoSignup" />

    <EditText
        android:id="@+id/edtSignUpUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/border_edittext"
        android:drawableStart="@drawable/ic_auth_username"
        android:drawablePadding="12dp"
        android:hint="@string/signup_username_field"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/all_white"
        android:textColorHint="@color/all_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleSignup" />

    <TextView
        android:id="@+id/txtValidateSignUpUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/all_error_text"
        app:layout_constraintStart_toStartOf="@+id/edtSignUpUsername"
        app:layout_constraintTop_toBottomOf="@+id/edtSignUpUsername" />

    <EditText
        android:id="@+id/edtSignUpPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_edittext"
        android:drawableStart="@drawable/ic_auth_password"
        android:drawableEnd="@drawable/ic_auth_password_invisible"
        android:drawablePadding="12dp"
        android:hint="@string/signup_password_field"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/all_white"
        android:textColorHint="@color/all_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValidateSignUpUsername" />


    <TextView
        android:id="@+id/txtValidateSignUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/all_error_text"
        app:layout_constraintStart_toStartOf="@id/edtSignUpPassword"
        app:layout_constraintTop_toBottomOf="@id/edtSignUpPassword" />

    <EditText
        android:layout_marginTop="16dp"
        android:id="@+id/edtSignUpConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:background="@drawable/border_edittext"
        android:drawableStart="@drawable/ic_auth_password"
        android:drawableEnd="@drawable/ic_auth_password_invisible"
        android:drawablePadding="12dp"
        android:hint="@string/signup_confirm_password_field"
        android:minHeight="48dp"
        android:padding="8dp"

        android:textColor="@color/all_white"
        android:textColorHint="@color/all_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtValidateSignUpPassword" />


    <TextView
        android:id="@+id/txtValidateSignUpConfirmPassword"
        app:layout_constraintTop_toBottomOf="@id/edtSignUpConfirmPassword"
        app:layout_constraintStart_toStartOf="@id/edtSignUpConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/all_error_text" />

    <EditText
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/txtValidateSignUpConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:id="@+id/edtSignUpEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border_edittext"
        android:drawableStart="@drawable/ic_auth_email"
        android:drawablePadding="12dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/signup_email_field"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/all_white"
        android:textColorHint="@color/all_white" />

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/edtSignUpEmail"
        app:layout_constraintStart_toStartOf="@id/edtSignUpEmail"
        android:id="@+id/txtValidateSignUpEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/all_error_text" />

    <Button
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/signup_btn_text" />
</androidx.constraintlayout.widget.ConstraintLayout>